# slm-mesh

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/commands/: mesh-lock.md  mesh-send.md  mesh-status.md  mesh-sync.md
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  architecture.md  cli-reference.md  configuration.md  getting-started.md  python-client.md  security.md  troubleshooting.md
integrations/antigravity/: README.md
integrations/cursor/: .cursorrules  README.md
integrations/vscode/: README.md
integrations/windsurf/: .windsurfrules  README.md
python/: MANIFEST.in  README.md  pyproject.toml
python/src/slm_mesh/: __init__.py  client.py  types.py
python/tests/: test_client.py
scripts/: postinstall.mjs
skills/: mesh-peers.md
src/: config.ts  index.ts  types.ts
src/adapters/: backend.ts  memory-bridge.ts  slm-bridge.ts  sqlite-backend.ts
src/broker/: broker-entry.ts  broker.ts  cleanup.ts  ensure.ts  handlers.ts  idle.ts  pid.ts  port.ts  server.ts  token.ts
src/broker/push/: connection.ts  manager.ts  ndjson.ts
src/cli/: cli.ts  format.ts
src/db/: connection.ts  migrations.ts  schema.ts
src/mcp/: agent-detect.ts  broker-client.ts  peer-listener.ts  server.ts
src/util/: logger.ts  paths.ts  uuid.ts
tests/helpers/: test-db.ts
tests/unit/: config-coverage.test.ts
tests/unit/adapters/: backend.test.ts  slm-bridge-coverage.test.ts  slm-bridge.test.ts
(+42 files in other folders)
